# PS_Model_Comparator

./: .dockerignore  API_USAGE.md  ARCHITECTURE.md  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  agent.py  image_utils.py  main.py  model_config.py  model_executor.py  models.py  validation.py
app/metrics/: __init__.py  multimodal_metrics.py  text_analyze_metric.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  start.bat  start.sh  vite.config.js
frontend/src/: App.vue
frontend/src/components/: ModelComparator.vue
