[project]
name = "ps-model-comparator"
version = "0.1.0"
description = "AI Model Comparator with multimodal analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "pydantic-ai==0.7.5",
    "pillow==11.3.0",
    "requests==2.32.5",
    "python-multipart==0.0.20",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.55.4",
    "numpy==2.3.2",
    "opencv-python==4.11.0.86",
    "ultralytics==8.3.186",
    "pytest==8.4.2",
]
